--- a/src/views/pages/account.ejs
+++ b/src/views/pages/account.ejs
@@ -37,7 +37,7 @@
             </ul>
         </div>
 
-        <div class="floatR wid700">
+        <div class="container-btn-account-add floatR wid700">
 
             <div class="max-cont mar-auto">
                 <a href="javascript:void(0);" id="add_synagogue" class="btn-box c-yw_h mar15">
