--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -47,7 +47,7 @@
 
 
 				<!-- body -->
-				<div class="wid44pc mar0-30 floatR">
+				<div class="list-container wid44pc mar0-30 floatR">
 
 					<div>
 						<% if (synagogues && synagogues[0]) { %>
@@ -100,7 +100,7 @@
 
 
 				<!-- pubs -->
-				<aside class="wid30pc floatR">
+				<aside class="pub wid30pc floatR">
 
 					<%- include('../partials/pub') %>
 
