--- a/src/views/pages/searchSynagogue.ejs
+++ b/src/views/pages/searchSynagogue.ejs
@@ -50,7 +50,7 @@
         </aside>
 
         <!-- search results -->
-        <div class="wid44pc mar0-30 floatR">
+        <div class="list-container wid44pc mar0-30 floatR">
 
             <div>
                 <% if (synagogues && synagogues[0]) { %>
@@ -111,7 +111,7 @@
         </div>
 
         <!-- pubs -->
-        <aside class="wid30pc floatR">
+        <aside class="pub wid30pc floatR">
 
             <%- include('../partials/pub') %>
 
