--- a/src/views/pages/synagogue.ejs
+++ b/src/views/pages/synagogue.ejs
@@ -21,7 +21,7 @@
 							<% } %>
 						</div>
 
-						<div class="floatR marT60">
+						<div class="bk-title-sm floatR marT60">
 							<div class="floatR">
 								<h2 class="mar10 fs-40 bold">
 									<%= synagogue.detail.name %>
@@ -86,7 +86,7 @@
 								</h3>
 
 								<!-- shaharit -->								
-								<nav class="mar20-0">
+								<nav class="list_tefila mar20-0">
 
 									<div class="floatR">
 
@@ -106,7 +106,7 @@
 												
 										<li class="wid400 pad10-0">
 
-											<div class="wid150 bold floatR">
+											<div class="data_name wid150 bold floatR">
 												<%= item.name %>
 											</div>
 
@@ -148,7 +148,7 @@
 								</nav>
 
 								<!-- minha -->
-								<nav class="mar20-0">
+								<nav class="list_tefila mar20-0">
 
 									<div class="floatR">
 
@@ -168,7 +168,7 @@
 													
 											<li class="wid400 pad10-0">
 
-											<div class="wid150 bold floatR">
+											<div class="data_name wid150 bold floatR">
 												<%= item.name %>
 											</div>
 
@@ -210,7 +210,7 @@
 								</nav>
 
 								<!-- arvit -->
-								<nav class="mar20-0">
+								<nav class="list_tefila mar20-0">
 
 									<div class="floatR">
 
@@ -231,7 +231,7 @@
 												
 										<li class="wid400 pad10-0">
 
-											<div class="wid150 bold floatR">
+											<div class="data_name wid150 bold floatR">
 												<%= item.name %>
 											</div>
 
@@ -281,7 +281,7 @@
 								</h3>
 
 								<!-- minha erev shabbat -->
-								<nav class="mar20-0">
+								<nav class="list_tefila mar20-0">
 
 									<div class="floatR">
 
@@ -301,7 +301,7 @@
 												
 										<li class="wid400 pad10-0">
 
-											<div class="wid150 bold floatR">
+											<div class="data_name wid150 bold floatR">
 												<%= item.name %>
 											</div>
 
@@ -339,7 +339,7 @@
 								</nav>
 
 								<!-- shaharit shabbat -->							
-								<nav class="mar20-0">
+								<nav class="list_tefila mar20-0">
 
 									<div class="floatR">
 
@@ -359,7 +359,7 @@
 												
 										<li class="wid400 pad10-0">
 
-											<div class="wid150 bold floatR">
+											<div class="data_name wid150 bold floatR">
 												<%= item.name %>
 											</div>
 
@@ -397,7 +397,7 @@
 								</nav>
 
 								<!-- minha shabbat -->
-								<nav class="mar20-0">
+								<nav class="list_tefila mar20-0">
 
 									<div class="floatR">
 
@@ -417,7 +417,7 @@
 												
 										<li class="wid400 pad10-0">
 
-											<div class="wid150 bold floatR">
+											<div class="data_name wid150 bold floatR">
 												<%= item.name %>
 											</div>
 
@@ -455,7 +455,7 @@
 								</nav>
 
 								<!-- arvit motsaei shabbat -->
-								<nav class="mar20-0">
+								<nav class="list_tefila mar20-0">
 
 									<div class="floatR">
 
@@ -475,7 +475,7 @@
 												
 										<li class="wid400 pad10-0">
 
-											<div class="wid150 bold floatR">
+											<div class="data_name wid150 bold floatR">
 												<%= item.name %>
 											</div>
 
@@ -514,7 +514,7 @@
 							</div>
 
 							<!-- messages -->
-							<div>
+							<div class="message-body">
 								<h3 class="ta-c col-w pad5">
 									הערות
 								</h3>
