--- a/src/views/partials/navBar&search&connexion.ejs
+++ b/src/views/partials/navBar&search&connexion.ejs
@@ -309,7 +309,7 @@
     <div class="window_connexion message_close"></div>
     <div class="container">
 
-        <div class="sarch-syna max-cont mar-auto">
+        <div class="search-syna max-cont mar-auto">
             <form id="search_synagogue" class="floatR mar0-150-md" action="/search/synagogue" method="GET">
                 <div>
                     <i class="fa fa-search"></i>
