--- a/src/views/pages/searchTefila.ejs
+++ b/src/views/pages/searchTefila.ejs
@@ -88,7 +88,7 @@
         </aside>
 
         <!-- search results -->
-        <div class="wid44pc mar0-30 floatR">
+        <div class="list-container wid44pc mar0-30 floatR">
 
             <div>
                 <% if (finalTefilotArray && finalTefilotArray[0]) { %>
@@ -162,7 +162,7 @@
         </div>
 
         <!-- pubs -->
-        <aside class="wid30pc floatR">
+        <aside class="pub wid30pc floatR">
 
             <%- include('../partials/pub') %>
             
