--- a/src/views/pages/resetPassword.ejs
+++ b/src/views/pages/resetPassword.ejs
@@ -9,7 +9,7 @@
                 עידכון סיסמא
             </h2>
 
-            <form method="POST" action="/forgot_password/update_password" id="form-newPass">
+            <form method="POST" action="/forgot_password/update_password" id="form-newPass-reset">
 
                 <div class="mar20-0">
 
