--- a/src/views/partials/navBar&search&connexion copy.ejs
+++ b/src/views/partials/navBar&search&connexion copy.ejs
@@ -1,13 +1,13 @@
 <!-- bar menu -->
 <section class="menu mar20-0">
     <nav class="container navbar-menu">
-        <ul class="ul-menu">
+        <ul class="menu_ul">
 
-            <!-- <li class="pad10-20 hamb col-w c-yw_h">
-                 <a href="" class="hamb col-w c-yw_h">
+            <li class="pad10-20 hamb col-w c-yw_h">
+                <!-- <a href="" class="hamb col-w c-yw_h"> -->
                     <i class="fas fa-bars"></i>
-                 </a>
-            </li> -->
+                <!-- </a> -->
+            </li>
 
 
             <li class="pad10-20 borR bor-w">
@@ -50,9 +50,9 @@
             </li>
 
 
-            <li class="pad10-20 borR bor-w menu1">
+            <li class="borR bor-w menu1">
 
-                <a href="/search/tefila?tefila=all&city=<%= zmanim.week.location.city %>" class="col-w c-yw_h">
+                <a href="/search/tefila?tefila=all&city=<%= zmanim.week.location.city %>" class="pad10-20 col-w c-yw_h">
                     <i class="fas fa-torah"></i>
                     תפילות
                 </a>
@@ -300,16 +300,11 @@
             </li>
 
         </ul>
-        <button type="button" class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </button>
     </nav>
 </section>
 
 <!-- Search & Connexion -->
-<section class="mar20-0">
+<section class="marB40">
 
     <div class="window_connexion message_close"></div>
     <div class="container">
