--- a/src/views/partials/navBar&search&connexion.ejs
+++ b/src/views/partials/navBar&search&connexion.ejs
@@ -309,7 +309,7 @@
 </section>
 
 <!-- Search & Connexion -->
-<section class="mar20-0">
+<section class="marT20 marB40">
 
     <div class="window_connexion message_close"></div>
     <div class="container">
