--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ footer {
 }
 
 .navbar-up {
-    display:flex;
+    display: flex;
     justify-content: space-between;
 }
 
@@ -120,6 +120,11 @@ footer {
     display: block;
     text-align: right;
     position: relative;
+}
+
+.btn-user_command.menu1:hover .menu2,
+.lang-con-mobile .menu1:hover .menu2 {
+    display: block;
 }
 
 .help_text {
@@ -812,7 +817,7 @@ select {
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: #101010;
+    background-color: white;
 }
 
 .soon_div_parent {
@@ -1057,17 +1062,19 @@ a.ui-button:active,
     100% { transform: rotate(360deg); }
 }
 
+
 @media not all and (hover: none) {
 
-    .menu1:hover .menu2 {
+    .menu .menu1:hover .menu2 {
         display: block;
     }
 
-    .menu2_h:hover .menu3 {
+    .menu .menu2_h:hover .menu3 {
         display: block;
     }
     
 }
+
 
 @media screen and (max-width: 1140px) {
 
@@ -1220,8 +1227,10 @@ a.ui-button:active,
  
 @media screen and (max-width: 767px) {
 
+    /* Debut navbar mobile */
     .menu {
         position: fixed;
+        width: 100%;
         top: 0;
         margin-top: 0;
     }
@@ -1229,16 +1238,21 @@ a.ui-button:active,
     .ul-menu {
         position: fixed;
         left: -100%;
-        top: 0px;
+        top: 50px;
         flex-direction: column;
-        background: #066093 linear-gradient(to bottom, #066093 26%, #2e87b9 100%);
-        /* opacity: 0.9; */
+        justify-content: flex-start;
+        overflow-x: scroll;
+        background: #2e87b9;
         width: 100%;
-        padding-top: 50px;
+        height: 100%;
         text-align: right;
         transition: 0.3s;
         box-shadow:
             0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .ul-menu .borR {
+        border: unset;
     }
 
     /* nav-item */
@@ -1249,7 +1263,7 @@ a.ui-button:active,
     .ul-menu li a {
         display: inline-block;
         width: 80%;
-        padding: 10px 50px;
+        padding: 10px;
     }
 
     .soon_div {
@@ -1259,7 +1273,7 @@ a.ui-button:active,
     .hamburger {
         display: block;
         cursor: pointer;
-        background: #066093;
+        background: transparent;
         border: none;
     }
 
@@ -1278,6 +1292,42 @@ a.ui-button:active,
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
+
+    .logo-site-mobile {
+        display: block;
+        width: 35px;
+        padding: 5px;
+    }
+
+    .logo-site-mobile img {
+        width: 100%;
+    }
+
+    .lang-con-mobile {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .con-mobile .btn-user_command {
+        display: inline-block;
+        text-align: center;
+        line-height: 23px;
+        border-radius: 50%;
+        margin: 14px 10px;
+        width: 23px;
+        height: 23px;
+        background-color: white;
+    }
+
+    .con-pc {
+        visibility: hidden;
+    }
+
+    .con-mobile .btn-user_command .menu2 {
+        right: -45px;
+    }
+    /* Fin navbar mobile */
 
 
 
