--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -122,7 +122,7 @@
             </div>
 
             <p class="ta-c col-w fs-13 marT40">
-                &copy; כל הזכויות שמורות ל"תפילה טיים" 2019-2021
+                &copy; כל הזכויות שמורות ל"תפילה טיים" 2019-<%= new Date().getFullYear() %>
             </p>
 
         </div>
