--- a/src/views/pages/synagogue.ejs
+++ b/src/views/pages/synagogue.ejs
@@ -17,7 +17,7 @@
 
 						<div class="floatR wid115x115 upload_img">
 							<% if(synagogue.detail.photo) { %>
-							<img src="/assets/img/BK/<%= synagogue.detail.photo %>" alt="תמונת <%= synagogue.detail.name %>" class="wid115x115 b_sh-w bor_rad5" />
+							<img src="https://tefilatime.s3.us-east-2.amazonaws.com/BK/<%= synagogue.detail.photo %>" alt="תמונת <%= synagogue.detail.name %>" class="wid115x115 b_sh-w bor_rad5" />
 							<% } %>
 						</div>
 
