--- a/src/views/pages/forgotPass.ejs
+++ b/src/views/pages/forgotPass.ejs
@@ -23,7 +23,7 @@
 
         <p>
             אם שכחת את הסיסמא שלך, 
-            הכנס כתובת המייל הרשומה במערכת <br> ותקבל דוא"ל אם הסיסמא.
+            הכנס כתובת המייל הרשומה במערכת <br> ותקבל דוא"ל עם קישור ליצור סיסמא חדשה.
         </p>
         <form id="form_forgotPass" action="" method="post">
             <input type="email" name="email"><button class="col-w c-yw_h point" type="submit"><i class="fas fa-arrow-left" aria-hidden="true"></i></button>
