--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<%= const { GOOGLE_API_KEY } = require('../../../config.js') %>
+
 <!-- footer -->
     <footer class="marT40">
         <div class="container">
@@ -139,8 +139,7 @@
     <!-- <script src="/js/modules/jquery.js"></script> -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=<%= GOOGLE_API_KEY %>&libraries=places&v=weekly"></script>
-    <!-- AIzaSyCzixLXCXnqK5EIoh3ydBBzp-0ltX3EhjA -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzixLXCXnqK5EIoh3ydBBzp-0ltX3EhjA&libraries=places&v=weekly"></script>
 
 
     
