valid google search

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,6 +15,7 @@
         <script src='https://unpkg.com/@fullcalendar/core@4.4.2/main.min.js'></script>
         <script src='https://unpkg.com/@fullcalendar/daygrid@4.4.2/main.min.js'></script>
 		<link href="/css/hebcal-styles.css" rel="stylesheet">
+		<meta name="google-site-verification" content="lKR1Fibp2HpLC0hDTX8BINU7lxdvGvcBNvAHStP9JoU" />
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-0NRRBEW7YN"></script>
 		<script>
