change accesibility module

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -135,6 +135,7 @@
     <!-- btn scroll to top -->
     <div class="toTop"><i class="fa fa-arrow-up"></i></div>
 
+    <script src="https://cdn.userway.org/widget.js" data-account="6yCv9zVViN"></script>
     <script type="module" src="/js/app.js"></script>
     <!-- <script src="/js/modules/jquery.js"></script> -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -145,7 +146,7 @@
     
 
     <!-- accessibililty -->
-    <script>
+    <!-- <script>
         nagishli_config = {
             // Plugin language, you can choose en for English, and he for Hebrew
             language: "he",
@@ -155,7 +156,7 @@
         };
         nl_pos = "bl";
     </script>
-    <script src="/plugins/nagishli.js" charset="utf-8" defer></script>
+    <script src="/plugins/nagishli.js" charset="utf-8" defer></script> -->
 
 </body>
 </html>
